--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ $(document).ready(function(){
     <div class="footer">
     	<div class="container">
     		<div class="col-md-3 grid_4">
-    		   <h3>About Us</h3>	
-    		   <p>" إعلان مزيد ٣٠ أخذ. و للجزر ا ت مقاطعة v. الشمال الغالي الشتوية أي تلك, دفّة إحتار والفلبين تحت عل. "</p>
+    		   <h3>بها في وب</h3>	
+    		   <p>" إعلان مزيد ٣٠ أخذ. و للجزر بها في وبة v. الشمال الغالي الشتوية أي تلك, دفّة إحتار والفلبين تحت عل. "</p>
     		      <ul class="social-nav icons_2 clearfix">
                     <li><a href="#" class="twitter"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="#" class="facebook"> <i class="fa fa-facebook"></i></a></li>
@@ -186,17 +186,17 @@ $(document).ready(function(){
                  </ul>
     		</div>
     		<div class="col-md-3 grid_4">
-    		   <h3>Quick Links</h3>
+    		   <h3>والفلبين</h3>
     			<ul class="footer_list">
     				<li><a href="#">-  ّة إحتار والفلبين تحت عل. </a></li>
     				<li><a href="#">-  لجزر العالمية بحث, به/a></li>
-    				<li><a href="#">-   إعلان مزيد ٣</a></li>
+    				<li><a href="#">-   إعلان بها في وب ٣</a></li>
     				<li><a href="#">-   إحتار والفلبين تحت </a></li>
     				<li><a href="#">-    بها في وباءت مقاطعة /a></li>
     			</ul>
     		</div>
     		<div class="col-md-3 grid_4">
-    		   <h3>Contact Us</h3>
+    		   <h3>بها في وب</h3>
     			<address>
                     <strong> بها في وباءت مقاطعة </strong>
                     <br>
@@ -204,9 +204,9 @@ $(document).ready(function(){
                     <br><br>
                     <span> بها في وباءت مقاطعة </span>
                     <br>
-                    <abbr>Telephone : </abbr> +202544444
+                    <abbr>بها في وب : </abbr> +202544444
                     <br>
-                    <abbr>Email : </abbr> <a href="mailto@example.com">info(at)avocato.com</a>
+                    <abbr>بها في وب : </abbr> <a href="mailto@example.com">info(at)avocato.co</a>
                </address>
     		</div>
     		<div class="col-md-3 grid_4">
